src/assets/css/template/main.css
@import url('https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css');
 
.hide {
  display: none !important;
}

.show {
  display: block;
}

.isso-btn {
  height: 50px !important;
  border-radius: 5px !important;
  background: #337AB7 !important;
  color: #ffffff !important;
  box-shadow: 1px 1px 1px 1px #dfdfdf !important;
  transition: all 0.5s !important;
  font-size: 16px  !important;
  padding: 12px 6px !important;
}
.isso-btn:hover {
  background: #2471B3;
}

.isso-btn-pink {
  height: 50px;
  border-radius: 5px;
  background: #FB74AB;
  color: #ffffff;
  box-shadow: 1px 1px 1px 1px #dfdfdf;
  transition: all 0.5s;
  border: solid 1px #FB74AB;
}
.isso-btn-pink:hover {
  background: #EC4087;
}

.isso-slidebox {
  position: relative;
  height: 100vh;
  padding: 0;
  margin: 0;
}
/* .main-login-box > body {
  overflow-y: hidden;
} */
.isso-slidebox .carousel-item {
  height: 100vh;
}
.isso-slidebox .middle-images {
  height: 280px;
  width: 280px;
  position: absolute;
  top: 50%;
  transform: translate(50%, -50%);
  right: 0;
}
.isso-slidebox .middle-images img {
  width: 100%;
}

.login-box {
  height: 100vh;
  position: relative;
  text-align: center;
}
.login-box .login-form {
  transform: translateY(25%);
  left: 34%;
  position: absolute;
  width: 400px;
}
.login-box .login-form .isso-input {
  border-left: 0px;
}
.login-box .login-form .isso-input input {
  border-left: none;
  height: 50px;
  /* border-radius: 5px; */
  font-size: 16px;
  width: 90%;
  margin-bottom: 40px;
}
.login-box .login-form .isso-input input ::placeholder {
  color: #9F9F9F !important;
  font-size: 16px !important;
}
.login-box .login-form .isso-input span {
  /* background: none !important; */
  float: left;
  font-size: 16px;
  height: 50px;
  /* border-radius: 5px 0; */
  height: 50px;
  border-right: 0;
}
.login-box .login-form .forgote-link {
  width: 100%;
  text-align: right;
  margin-top: 10px;
  font-size: 12px;
}
.login-box .login-form .forgote-link a {
  color: #B71A1A;
  text-decoration: none;
}
.login-box .logo {
  height: 100px;
}
.login-box .form-box {
  margin-top: 50px;
  position: relative;
}
.login-box .footer {
  width: 100%;
  position: absolute;
  bottom: 0;
  text-align: right;
  padding: 5px;
  color: #000;
  font-size: 12px;
}
.alert {
  margin-bottom: 20px;
  border: 1px solid transparent;
  border-radius: 4px;
  text-align: left;
  padding: 5px !important;
}
header .logo-box {
  float: left;
 
  padding-left: 120px;
   
  height: 130px;
  width: 130px;
  background: white;
  border-radius: 50%;
  box-shadow: 0px 0px 9px 2px #e1e1e1;
  padding: 10px 25px;
  margin-top: 11px;
  margin-left: 120px;
}
header .logo-box img {
  height: 100px;
  margin-top: 10px;
}
header .user-dropbox {
  margin-top: 17px;
  font-size: 12px;
}
header .user-dropbox img {
  height: 50px;
  width: 50px;
  border-radius: 50%;
}

.menu-box {
  background: white;
  width: auto;
  box-shadow: 0px 0px 1px 1px #f1f1f1;
  float: right;
  position: absolute;
  right: 37px;
  top: 65px;
  border-radius: 10px;
  padding: 0;
}
.menu-box ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  padding: 10px;
}
.menu-box ul li {
  border-bottom: solid 1px #ececec;
  margin-bottom: 0px;
  padding: 7px 0;
  font-size: 14px;
}
.menu-box ul li:last-child {
  border: none;
}
.menu-box ul li a {
  text-decoration: none;
  color: #000;
}
.menu-box::after {
  position: absolute;
  top: -17px;
  content: url("../img/Triangle.svg");
  left: 50%;
}

.isso-wrapper .nav-tabs {
  margin-top: 30px;
  outline: none;
}
.isso-wrapper .nav-tabs .nav-link.active {
  border: none;
  border-bottom: solid 3px orange;
  font-weight: 700;
}
.isso-wrapper .nav-tabs:focus {
  outline: none;
}
.isso-wrapper li {
  font-size: 14px;
}
.isso-wrapper li button {
  background: none;
  margin-right: 20px;
  padding: 10px 0;
}
.isso-wrapper li button:hover {
  border: none;
  outline: none;
}
.isso-wrapper li button:focus:hover {
  border: none;
}

.event-container {
  margin-top: 100px;
}
.event-container .event-namebox {
  margin-bottom: 30px;
  display: inline-block;
}
.event-container .event-namebox .event-locaton {
  color: #000;
  font-size: 14px;
}
.event-container .event-namebox span.back {
  display: inline-block;
  /* margin-bottom: 30px; */
  color: #000;
  font-size: 14px;
  cursor: pointer;
  background: transparent;
  padding: 10px;
  box-shadow: none;
  cursor: pointer;
}
.event-container .event-namebox span.back a {
  text-decoration: none;
  font-weight: bold;
}
.event-container .event-namebox span.back img {
  height: 12px;
  margin-right: 5px;
}
.event-container .event-card {
  background: #fff;
  box-shadow: 0px 0px 10px 4px #e7e7e7;
  padding: 5px;
  text-align: center;
  margin-bottom: 30px;
}
.event-container .event-card .event-name h2 {
  font-size: 24px !important;
}
.event-container .event-card .event-locaton {
  color: #868686;
}
.event-container .event-card .event-locaton img{margin-right: 5px;}
.event-container .event-card .pricebox {
  margin: 50px 0;
}
.event-container .event-card .pricebox h1 {
  font-size: 28px;
  font-weight: 700;
}
.event-container .event-card .pricebox h3 {
  font-size: 18px;
  font-weight: 400;
}
.event-container .event-card .btn-full {
  width: 100% !important;
}
.event-container .tournament-box {
  box-shadow: 0px 0px 7px 1px #dadada;
  padding: 20px 0 0;
  margin-bottom: 60px;
  background: #ffffff;
  border-radius: 15px;
}
.event-container .tournament-box .event-name {
  text-align: left;
}
.border-right-dark{
  border-right: 1px solid #BBBEBF;
}


.game-name h2 {

  background: #FFCE38!important;
  display: inline-block;
  padding: 10px;
  position: relative;
  text-align: center;
  margin-bottom: 30px;
  height: 38.7px;
  font-size: 19px;

  
}
.game-name h2:before {
  content: url(../../images/web/left.png);
  height: 40px;
  width: 40px;
  position: absolute;
  left: -69px;
  bottom: -1.5px;
}
.game-name h2:after {
  content: url(../../images/web/right.png);
  height: 40px;
  width: 40px;
  position: absolute;
  right: -40px;
  bottom: -1.5px;
}

.event-container .tournament-box .event-locaton {
  color: #868686;
  font-size: 14px;
}
.event-container .tournament-box .category-box {
  text-align: center;
  /* margin-bottom: 50px 0; */
  
}
.category-box h2{font-size: 18px;
  margin-bottom: 20px;margin-top: 0;}
.categories button {
  margin-right: 5px;
}
.float-right {
  float: right;
}
.float-left {
  float: left;
}

/****** Custom Toast ****/
/* :host ::ng-deep .custom-toast .ui-toast {
  position: fixed;
  top: 20%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 100%;
}
.ui-toast .ui-toast-message.ui-toast-message-error {
  width: 150%;
  border-radius: 19px;
}
.ui-toast .ui-toast-summary {
  padding: 6px 0 .5em 0;
}

.ui-toast .ui-toast-close-icon {
  padding-top: 10px;
  padding-right: 21px;
  text-decoration: none;
}
.ui-toast .ui-toast-icon {
  padding-top: 5px;
}
:host ::ng-deep .ui-toast .ui-toast-message-content { 
  padding: 15px 10px 5px 10px;
}
:host ::ng-deep .ui-toast .ui-toast-message-text-content {
  padding: 8px 0 .25em 0;
  margin-left: 2.5em;
} */

